# LL

./: README.md  UI.prefab  UI_Package.unity  UI_Package_update.unity
ARUnity/Assets/: AR Scene.prefab  ARTouch.cs  ImageTracker.cs  New Material 1 Variant Variant Variant Variant Variant.mat  New Material 1 Variant Variant Variant.mat  New Material 1 Variant.mat  New Material 3 Variant.mat  Orbit.cs  Slider.cs  page-012.prefab  page-013.prefab  page-014.prefab  page-015.prefab  page-016.prefab  page-017.prefab  page-018.prefab  page-019.prefab  page-020.prefab  page-021.prefab  page-022.prefab
ARUnity/Assets/Materials/: 2k_mar.mat  System.mat  as10-34-5013.mat  earth.mat  mars 2.mat  mars.mat  mars_1k_color.mat  (+4 more)
ARUnity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Summer Physics Model/: Assembly-CSharp.csproj  Physics model.sln  Summer Physics Model.sln  gitignore.txt
Summer Physics Model/Assets/: 17.mat  18.mat  22.mat  AR Scene.prefab  ARUI.cs  ImageTracker.cs  New Material 1 Variant Variant Variant Variant.mat  New Material 1 Variant Variant.mat  New Material 1 Variant.mat  ReferenceImageLibrary.asset  Spring_Mass.fbx  System.prefab  page-012.prefab  page-014.prefab  page-015.prefab  page-016.prefab  page-017.prefab  page-018.prefab  page-019.prefab  page-020.prefab  page-021.prefab  page-022.prefab
Summer Physics Model/ProjectSettings/: ProjectSettings.asset  TagManager.asset
backend/: Cargo.toml  books.json  spec.md
backend/9781009071888/: 1.json
backend/src/: app.rs  books.rs  main.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
frontend/src/: App.vue  main.ts
unity/HandTracking/: requirements.txt  t.py
unity/ProjectSettings/: ProjectSettings.asset
(+31 files in other folders)
